# tetrad-lens

./: .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  co-maintainer-wanted.md  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  publish.yml  release-please.yml  stale.yml
docs/: architecture.d2  architecture.md  case_study_claude_code.md  case_study_cline.md  figure_ground_critique_response.md  roadmap.md
examples/: langfuse_dashboard_filter.md  quickstart.py
python/: CHANGELOG.md  README.md  pyproject.toml
python/src/tetrad_lens/: __init__.py  cli.py  heuristic.py  llm_tagger.py  masking.py  review_queue.py  schema.py  sdk.py
python/src/tetrad_lens/adapters/: __init__.py  claude_code_skill.py  cline_mcp.py
python/tests/: test_async_observe.py  test_cli.py  test_context_attrs.py  test_figure_ground_tunable.py  test_heuristic.py  test_llm_tagger.py  test_masking.py  test_masking_extra.py  test_review_queue.py  test_review_queue_flush.py  test_schema.py  test_sdk_smoke.py
schema/: otel-mapping.md  tetrad-v1.json
schema/i18n/: en.json  ja.json
scripts/: manual_steps_remaining.sh
skills/tetrad-lens/: SKILL.md
