[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tetrad-lens"
version = "0.2.0"
description = "McLuhan-tetrad-shaped attribute schema and three-tier tagger for AI agent traces, on top of Langfuse and OpenTelemetry."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "tetrad-lens contributors"}
]
keywords = ["mcluhan", "tetrad", "observability", "opentelemetry", "langfuse", "llm", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring"
]
dependencies = [
  "langfuse>=4.0.0,<5",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "pydantic>=2.7.0,<3",
  "jsonschema>=4.21.0"
]

[project.optional-dependencies]
ollama = [
  "ollama>=0.3.0"
]
mcp = [
  "mcp>=1.0.0"
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-jsonschema>=4.21.0"
]

[project.urls]
Homepage = "https://github.com/hinanohart/tetrad-lens"
Issues = "https://github.com/hinanohart/tetrad-lens/issues"
Changelog = "https://github.com/hinanohart/tetrad-lens/blob/main/CHANGELOG.md"

[project.scripts]
tetrad-lens = "tetrad_lens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tetrad_lens"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
# warn_unused_ignores is OFF on purpose: many `# type: ignore` markers in this
# package are conditional on optional dependencies (langfuse, ollama, mcp) being
# importable. When the dep IS importable in CI mypy thinks the ignore is
# unused; when it ISN'T importable the ignore is exactly what stops the error.
warn_unused_ignores = false
no_implicit_optional = true
ignore_missing_imports = true
